--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,5 @@ readme = "README.md"
 license = { file = "LICENSE" }
 dependencies = []  # Add your dependencies here
 
-[tool.setuptools]
-packages = { find = { where = ["src"] } }
+[tool.setuptools.packages.find]
+where = ["src"]
